feat(ui): Enhance music playback highlighting and cursor
Refactors the ABCJS playback cursor and highlight logic. The previous cursor implementation was prone to artifacts and less robust. This change introduces a more reliable SVG-based cursor line and improves the styling of the note highlight for clearer visual feedback during playback.

--- a/index.html
+++ b/index.html
@@ -87,14 +87,15 @@
         fill: #121212 !important;
       }
       
-      /* Playback Cursor - Increased Specificity */
-      #paper .abcjs-cursor,
-      #paper .abcjs-cursor path,
-      #paper g.abcjs-cursor path {
+      /* Playback Highlight (Current Note) */
+      .abcjs-highlight {
         fill: #062E6F !important;
+      }
+      
+      /* Playback Cursor (Vertical Line) */
+      .abcjs-cursor {
         stroke: #A8C7FA !important;
         stroke-width: 2px !important;
-        opacity: 1 !important;
       }
     </style>
   <script type="importmap">
