feat: Add Vercel Analytics integration
Integrates Vercel Analytics to track user engagement and performance metrics. This will help monitor application usage and identify areas for improvement.

--- a/index.html
+++ b/index.html
@@ -263,7 +263,9 @@
     "react-dom/client": "https://aistudiocdn.com/react-dom@^19.2.0/client",
     "react-dom": "https://aistudiocdn.com/react-dom@^19.2.0",
     "abcjs": "https://aistudiocdn.com/abcjs@^6.5.2",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/"
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+    "@vercel/analytics/react": "https://esm.sh/@vercel/analytics@1.5.0/react?external=react,react-dom",
+    "@vercel/analytics/": "https://aistudiocdn.com/@vercel/analytics@^1.5.0/"
   }
 }
 </script>
