feat: Improve SEO, model capabilities, and UI
This commit enhances the application's search engine optimization with meta tags and a sitemap. It also integrates a new validation tool into the Gemini service to improve the accuracy of generated ABC notation. Additionally, UI elements for feedback and about sections have been added.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,31 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <!-- SEO & Identity -->
+    <title>Resonote - AI Sheet Music Scanner & ABC Notation Converter</title>
+    <meta name="description" content="Transform sheet music into playable ABC notation instantly with Resonote. Professional AI Optical Music Recognition (OMR) powered by Gemini 3 Pro Vision. Digitize, edit, and listen to scores online." />
+    <meta name="keywords" content="sheet music scanner, optical music recognition, OMR online, AI music transcription, image to ABC notation, Gemini AI music, digitize sheet music, play sheet music, music OCR, ABC notation editor, Resonote, IRedDragonICY" />
+    <meta name="author" content="IRedDragonICY (Mohammad Farid Hendianto)" />
+    <meta name="google-site-verification" content="SeU7j1p_RghwijQK39HcGyU9L5su7-xhodHrPXhE2Xs" />
+    <meta name="theme-color" content="#0F0F0F" />
+    <link rel="canonical" href="https://resonoteai.vercel.app/" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://resonoteai.vercel.app/" />
+    <meta property="og:title" content="Resonote - AI Sheet Music Scanner & ABC Notation Converter" />
+    <meta property="og:description" content="Transform sheet music into playable ABC notation instantly with Resonote. Professional AI OMR powered by Gemini 3 Pro Vision." />
+    <meta property="og:site_name" content="Resonote" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://resonoteai.vercel.app/" />
+    <meta name="twitter:title" content="Resonote - AI Sheet Music Scanner" />
+    <meta name="twitter:description" content="Transform sheet music into playable ABC notation instantly with Resonote. Professional AI OMR powered by Gemini 3 Pro Vision." />
+
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'%3E%3Crect width='32' height='32' rx='10' fill='%23A8C7FA'/%3E%3Cpath d='M20 10V6h-7v12.5c0 1.93-1.57 3.5-3.5 3.5S6 20.43 6 18.5 7.57 15 9.5 15c.47 0 .91.1 1.32.26V10h9z' fill='%23062E6F' transform='translate(2, 2)'/%3E%3Cpath d='M26 4l-1.5 3L21.5 8.5 24.5 10 26 13l1.5-3 3-1.5-3-1.5z' fill='%23062E6F'/%3E%3C/svg%3E" />
-    <title>Resonote</title>
+    
     <!-- Google Fonts: Inter for UI, Roboto Mono for Code -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
