feat: Enhance PDF transcription and add export functionality
- Improve PDF handling in GeminiService by explicitly setting MIME type and instructing visual OMR.
- Introduce `lamejs` library for MP3 export.
- Update Editor component to include import/export buttons.
- Refactor App component to use a Workspace and TabBar for better structure.
- Enhance MusicDisplay component for thumbnail generation and multi-format export (PNG, PDF, MIDI, WAV, MP3).
- Add a `Session` type to manage application state.

--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
         }
       }
     </script>
+    
+    <!-- MP3 Encoder Library -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lamejs/1.2.1/lame.min.js"></script>
+
     <style>
       body {
         background-color: #0F0F0F;
