fix: Ensure proper viewport and scrolling behavior
This commit addresses issues related to application scrolling and layout. It enforces a full-height viewport by setting `height: 100%` and `overflow: hidden` on the html and body elements, preventing unintended global scrolling. Additionally, it adjusts the main application container and workspace columns to use `h-screen` and `min-h-0` respectively, ensuring that child elements correctly manage their own scrollable areas and maintain their intended heights regardless of content. This also includes a fix for the music display scroll container to accurately track content size when zooming.

--- a/index.html
+++ b/index.html
@@ -109,6 +109,12 @@
         --scrollbar-thumb: #444;
       }
 
+      html, body {
+        height: 100%;
+        margin: 0;
+        overflow: hidden; /* CRITICAL: Prevent global scrolling */
+      }
+
       body {
         background-color: rgb(var(--md-sys-background));
         color: rgb(var(--md-sys-on-surface));
