feat: Introduce keyboard shortcuts and settings modal
Adds a new `ShortcutsModal` and integrates keyboard shortcut handling throughout the application.

- **Settings**: New `shortcuts` field added to `UserSettings` to store user-defined keybindings.
- **Defaults**: `DEFAULT_SHORTCUTS` defined for common actions.
- **Keyboard Utilities**: New functions `normalizeKeyEvent` and `matchesShortcut` for robust shortcut matching.
- **App**: Global keyboard event listener added, handling actions via shortcuts and `CommandMenu`.
- **Header**: Added button to open the new `ShortcutsModal`.
- **Editor**: Keydown events handled to enable shortcuts.
- **MusicDisplay**: Cursor rendering improved for smoother visual feedback during playback.

This change enhances user experience by providing efficient keyboard navigation and customization options.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en" class="dark">
   <head>
@@ -166,13 +167,17 @@
 
       /* Cursor and Highlight */
       #paper svg .abcjs-highlight {
-        fill: #0a9ecc !important;
+        fill: rgb(var(--md-sys-primary)) !important;
+        opacity: 0.8;
       }
       
       #paper svg .abcjs-cursor {
-        stroke: #0a9ecc !important;
-        stroke-width: 2px;
+        stroke: rgb(var(--md-sys-primary)) !important;
+        stroke-width: 3px;
+        stroke-linecap: round;
         fill: none !important;
+        opacity: 0.7;
+        will-change: transform, x1, y1, x2, y2;
       }
 
       /* ABCJS Audio Player CSS */
